--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -39,8 +39,8 @@ let cover_url = cover ? cover : astropodConfig.cover;
   </div>
 
   <div class="flex md:-mt-12 px-4 md:pl-52">
-    <a href="/" class="btn btn-ghost m-1 justify-self-start px-2 sm:px-4"> Home</a>
-    <a href="/about" class="btn btn-ghost m-1 justify-self-end px-2 sm:px-4"> About</a>
+    <a href="/" class="btn btn-ghost m-1 justify-self-start px-2 sm:px-4"> Inicio</a>
+    <a href="/about" class="btn btn-ghost m-1 justify-self-end px-2 sm:px-4"> Acerca</a>
 
     <div class="grow"></div>
 
