--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -11,7 +11,7 @@ import astropodConfig from "../../.astropod/astropod.config.json";
       src={astropodConfig.cover}
     />
     <h1 class="text-9xl font-bold mb-2">404</h1>
-    <h3 class="text-2xl">The page you're looking for couldn't be found.</h3>
-    <a class="btn btn-accent mt-9" href="/">Home</a>
+    <h3 class="text-2xl">La página que buscas no fué encontrada.</h3>
+    <a class="btn btn-accent mt-9" href="/">Inicio</a>
   </div>
 </BaseLayout>
