--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,9 +2,6 @@
 import BaseHead from "../components/BaseHead.astro";
 import Footer from "../components/Footer.astro";
 import astropodConfig from "../../.astropod/astropod.config.json";
-
-import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
-
 const { image, title = astropodConfig.name, description = astropodConfig.description } = Astro.props;
 ---
 
@@ -13,14 +10,17 @@ const { image, title = astropodConfig.name, description = astropodConfig.descrip
   <head>
     <BaseHead title={title} description={description} image={image} />
   </head>
-  <body class="bg-base-200 min-h-screen">
-    <div class="container mx-auto lg:max-w-[960px]">
-      <div class="md:flex md:justify-center w-full">
-        <main class="-mt-5 w-full">
-          <slot />
-        </main>
+  <body class="bg-base-200 text-base-content min-h-screen flex flex-col">
+ 
+
+    <!-- Contenedor principal -->
+    <main class="flex-grow">
+      <div class="container mx-auto my-10 lg:max-w-[960px]  px-4">
+        <slot />
       </div>
-      <Footer />
-    </div>
+    </main>
+
+    <!-- Footer -->
+    <Footer />
   </body>
 </html>
