--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -12,7 +12,7 @@ let cover_url = cover ? cover : astropodConfig.cover;
 ---
 
 <div class="card min-w-full bg-base-100 shadow-md md:pb-3 w-full">
-  <div class="aspect-[3/1] mt-5 w-full">
+  <div class="aspect-[3/1]  w-full">
     <div class="relative inline-block w-full">
       <img src={astropodConfig.banner} alt={astropodConfig.name + " banner"} class="object-cover w-full aspect-[3/1]" />
       <div
