--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,7 +19,7 @@ import Pagination from "../components/pagination.astro";
   <div class="hero-section bg-cover bg-center" >
     <div class="overlay bg-black bg-opacity-60 p-8 flex flex-col justify-center items-center text-center">
       <h1 class="text-white text-6xl font-bold mb-4"></h1>
-      <p class="text-white text-lg max-w-3xl">{description}</p>
+      <p class="text-white text-lg max-w-3xl">STORE</p>
     </div>
   </div>
 
