--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -41,6 +41,7 @@ let cover_url = cover ? cover : astropodConfig.cover;
   <div class="flex md:-mt-12 px-4 md:pl-52">
     <a href="/" class="btn btn-ghost m-1 justify-self-start px-2 sm:px-4"> Inicio</a>
     <a href="/about" class="btn btn-ghost m-1 justify-self-end px-2 sm:px-4"> Acerca</a>
+    <a href="/shop" class="btn btn-ghost m-1 justify-self-end px-2 sm:px-4">Shop</a>
 
     <div class="grow"></div>
 
