--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -11,7 +11,7 @@ const explicitLabel = explicit === undefined ? astropodConfig.explicit : explici
 let cover_url = cover ? cover : astropodConfig.cover;
 ---
 
-<div class="card min-w-full bg-base-100 shadow-md md:pb-3 w-full">
+<div class="container min-w-full bg-base-100 max-w-[1440px] shadow-md md:pb-3 w-full">
   <div class="aspect-[3/1]  w-full">
     <div class="relative inline-block w-full">
       <img src={astropodConfig.banner} alt={astropodConfig.name + " banner"} class="object-cover w-full aspect-[3/1]" />
