--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -47,10 +47,10 @@ const { page } = Astro.props;
   
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
     <!-- Tarjeta 1: Solución de código abierto -->
-    <div class=" p-4 rounded-lg shadow-lg">
+    <div class="p-4 rounded-lg shadow-lg">
       <h3 class="text-xl font-semibold mb-2">Código Abierto</h3>
       <p>
-        Astropod es una plataforma gratuita y de código abierto para la creación y alojamiento de podcasts. Gestiona tus podcasts sin depender de servicios de terceros.
+        ElSaltoWeb Podcast es una plataforma basada en código abierto para la creación y alojamiento de podcasts. Gestiona tu contenido sin depender de servicios de terceros.
       </p>
     </div>
 
@@ -58,27 +58,28 @@ const { page } = Astro.props;
     <div class="p-4 rounded-lg shadow-lg">
       <h3 class="text-xl font-semibold mb-2">Control Total</h3>
       <p>
-        Con Astropod, eres el dueño de tus propios datos. Sube y organiza tus episodios fácilmente, sin intermediarios ni comisiones por el servicio.
+        Con ElSaltoWeb Podcast, eres el dueño de tus datos. Sube y organiza tus episodios de manera sencilla, sin intermediarios ni comisiones ocultas.
       </p>
     </div>
 
     <!-- Tarjeta 3: Basado en Astro -->
-    <div class=" p-4 rounded-lg shadow-lg">
+    <div class="p-4 rounded-lg shadow-lg">
       <h3 class="text-xl font-semibold mb-2">Tecnología Astro</h3>
       <p>
-        Astropod está construido con Astro, un framework estático que garantiza un rendimiento optimizado y una experiencia fluida tanto para los creadores como para los oyentes.
+        Nuestra plataforma está desarrollada con Astro, un framework estático que asegura un rendimiento optimizado y una experiencia fluida tanto para los creadores como para los oyentes.
       </p>
     </div>
 
-    <!-- Tarjeta 4: Plataforma desde 3,99€ al mes -->
-    <div class=" p-4 rounded-lg shadow-lg">
-      <h3 class="text-xl font-semibold mb-2">Tu Podcast desde 3,99€/mes</h3>
+    <!-- Tarjeta 4: Plataforma por solo 20€ al mes -->
+    <div class="p-4 rounded-lg shadow-lg">
+      <h3 class="text-xl font-semibold mb-2">Tu Podcast por 20€/mes</h3>
       <p>
-        ¿Quieres tu propia plataforma de podcasts? Con Astropod, puedes tenerla desde solo 3,99 euros al mes. ¡Empieza a crear y compartir tus episodios hoy mismo!
+        ¿Listo para tener tu propio espacio de podcasts? Con ElSaltoWeb Podcast, puedes gestionarlo todo por solo 20 euros al mes. ¡Comienza a crear y compartir tus episodios hoy mismo!
       </p>
     </div>
-  </div>
+</div>
 </section>
+
 
 </BaseLayout>
 
