--- a/src/pages/episode/[slug].astro
+++ b/src/pages/episode/[slug].astro
@@ -38,8 +38,9 @@ const description = marked.parse(entry.body.slice(0, 500), { renderer: renderer 
   cover={episode.cover}
 >
   <Content />
+   description={description}
 </EpisodeLayout>
-
+ description={description}
 <AudioPlayer />
 
 <script define:vars={{ episode }}>
