--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -21,6 +21,7 @@ let cover_url = cover ? cover : astropodConfig.cover;
         <div class="flex flex-col absolute bottom-0 left-32 md:left-52 px-3">
           <p class="mb-1 text-xs font-medium text-white">{subtitle}</p>
           <h1 class="mb-3 text-lg md:text-4xl font-black text-white">{title}</h1>
+           <p class="mb-1 text-xs font-light text-white">{description}</p> <!-- Mostrar descripción aquí -->
         </div>
       </div>
       {
