--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -44,7 +44,7 @@ const { page } = Astro.props;
 ) : null}
    <!-- Sección Explicativa sobre Astropod -->
 <section class="mt-8 p-4 bg-base-100 shadow-md rounded-md">
-  <h2 class="text-3xl font-bold mb-6 text-center">¿Qué es Astropod?</h2>
+  <h2 class="text-3xl font-bold mb-6 text-center">¿Qué es ElSaltoWeb Podcast?</h2>
   
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
     <!-- Tarjeta 1: Solución de código abierto -->
