--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -42,7 +42,7 @@ let cover_url = cover ? cover : astropodConfig.cover;
     <a href="/" class="btn btn-ghost m-1 justify-self-start px-2 sm:px-4"> Inicio</a>
     <a href="/about" class="btn btn-ghost m-1 justify-self-end px-2 sm:px-4"> Acerca</a>
     <a href="/shop" class="btn btn-ghost m-1 justify-self-end px-2 sm:px-4">Shop</a>
-    <a href="/admin/index.html" class="btn btn-ghost m-1 justify-self-end px-2 sm:px-4">Login</a>
+    <a href="/admin" class="btn btn-ghost m-1 justify-self-end px-2 sm:px-4">Login</a>
 
     <div class="grow"></div>
 
