--- a/src/layouts/EpisodeLayout.astro
+++ b/src/layouts/EpisodeLayout.astro
@@ -13,10 +13,10 @@ const descriptionText = description || "Descripción no disponible"; // Valor po
   
 ---
 
-<BaseLayout title={`${title} - ${astropodConfig.name}`} description={description} image={cover}>
-  <HeaderCard title={title} subtitle={astropodConfig.name} cover={cover} explicit={explicit} />
+  <main class="max-w-full prose">
+    <!-- Mostrar la descripción fuera del marcado principal -->
+    <p class="episode-description text-lg font-light">{descriptionText}</p>
 
-  <main class="md:flex md:justify-center">
     <article class="card prose min-w-full prose-img:mx-auto bg-base-100 shadow-md p-8 mt-12">
       <slot />
     </article>
