--- a/src/pages/episode/[slug].astro
+++ b/src/pages/episode/[slug].astro
@@ -1,6 +1,6 @@
 ---
-import { CollectionEntry, getCollection } from "astro:content";
-import { episodeSchema } from "../../content/config";
+import { type CollectionEntry, getCollection } from "astro:content";
+import type { episodeSchema } from "../../content/config";
 import EpisodeLayout from "../../layouts/EpisodeLayout.astro";
 import AudioPlayer from "../../components/audioPlayer.astro";
 import PlainTextRenderer from "marked-plaintext";
@@ -36,7 +36,7 @@ const description = marked.parse(entry.body.slice(0, 500), { renderer: renderer 
   explicit={episode.explicit}
   description={description}
   cover={episode.cover}
->
+  >
   <Content />
 </EpisodeLayout>
 
